--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</div>
 			</div>
 		</div><p>Controlls: ASDW</p>
-		<p><span style="color: white"><center>By <a href="rubentorresbonet.wordpress.com/">Rubén Torres</a>, <a href="https://www.facebook.com/luca.scaramuzzino">Luca Scaramuzzino</a> and <a href="http://kibotu.net/">Jan Rabe</a></center></span></p>
+		<p><span style="color: white"><center>By <a href="rubentorresbonet.wordpress.com/">Rubén Torres</a>, <a href="http://www.mrluca.com/">Luca Scaramuzzino</a> and <a href="http://kibotu.net/">Jan Rabe</a></center></span></p>
 		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
 	</body>
 </html>
